@@ -43,6 +43,17 @@
     appropriate for the entry or if needed the entire day's listitem.
 -->
     <listitem>
+      <para>2017-03-25</para>
+      <itemizedlist>
+        <listitem>
+          <para>[dj] - Update to lfs-bootscripts-20170825. Fix a scope issue in
+          the rc script. Thanks to "quesker" in #lfs-support for the report and
+          subsequent testing.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2017-03-18</para>
       <itemizedlist>
         <listitem>
