@@ -1,3 +1,7 @@
+2017-03-25 DJ Lucas <dj@linuxfromscratch.org>
+   * Bash-4.4 changes no longer allow continue in function to pass to calling
+     loop.
+
 2015-02-22 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Cosmetic changes to network scripts' output
 
